# rust_ws

./: .env
webapp/: .env  Cargo.toml
webapp/src/: errors.rs  handlers.rs  models.rs  routers.rs
webapp/static/: register.html
webapp/static/css/: teachers.html
webservice/: Cargo.toml
webservice/src/: db_access.rs  errors.rs  handlers.rs  models.rs  routers.rs  state.rs
webservice/src/db_access/: course.rs  teacher.rs
webservice/src/handlers/: course.rs  general.rs
webservice/src/models/: course.rs  teacher.rs
